--- a/application.yml
+++ b/application.yml
@@ -1,14 +1,16 @@
-server: # REST and WS server, Do not change this.
-  port: 443
+server: # REST and WS server
+  port: 8080
   address: 0.0.0.0
 
 lavalink:
   server:
-    password: "maybeiwasboring" # Password, You can change this.
+    password: "vinn"
     playerUpdateInterval: 5 # How frequently to send player updates to clients, in seconds
     statsTaskInterval: 60 # How frequently to send the node stats to clients, in seconds
     koe:
-      useEpoll: true
+      useNAS: true # Native Audio Sending (udp-queue)
+      useEpoll: true # Native transport for Linux x86-64 & aarch64
+      useKQueue: false # Native transport for Darwin Aarch64
       highPacketPriority: true
       bufferDurationMs: 400
       byteBufAllocator: "default"
@@ -19,6 +21,7 @@ lavalink:
       http: true
       odysee: true
       reddit: true
+      rumble: true
       soundcloud: true
       tiktok: true
       twitch: true
@@ -51,7 +54,7 @@ lavalink:
 
 metrics:
   prometheus:
-    enabled: true
+    enabled: false
     endpoint: /metrics
 
 sentry:
